SDKs/twilio.com/twilio_wireless_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateCommandRequest req = new CreateCommandRequest() {{
                security = new CreateCommandSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateCommandCreateCommandRequest() {{
                    callbackMethod = "HEAD";
                    callbackUrl = "voluptas";
                    command = "culpa";
                    commandMode = "text";
                    deliveryReceiptRequested = true;
                    includeSid = "dolor";
                    sim = "expedita";
                }};
            }};

            CreateCommandResponse res = sdk.createCommand(req);

            if (res.wirelessV1Command.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createCommand` - Send a Command to a Sim.
* `createRatePlan`
* `deleteCommand` - Delete a Command instance from your account.
* `deleteRatePlan`
* `deleteSim` - Delete a Sim resource on your Account.
* `fetchCommand` - Fetch a Command instance from your account.
* `fetchRatePlan`
* `fetchSim` - Fetch a Sim resource on your Account.
* `listAccountUsageRecord`
* `listCommand` - Retrieve a list of Commands from your account.
* `listDataSession`
* `listRatePlan`
* `listSim` - Retrieve a list of Sim resources on your Account.
* `listUsageRecord`
* `updateRatePlan`
* `updateSim` - Updates the given properties of a Sim resource on your Account.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
